--- a/MarketplaceAPI/MarketplaceAPI.csproj
+++ b/MarketplaceAPI/MarketplaceAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c9bb54d7-a413-4094-a8bf-8ef613f527d5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
